# TensorSludge

./: .gitignore  Cargo.toml  README.md
examples/: basic.rs  mnist.rs  profile.rs
shaders/: compile.sh  elem_add.comp  elem_add.comp.spv  elem_mult.comp  elem_mult.comp.spv  elem_sub.comp  elem_sub.comp.spv  in_size.comp  matrix_multiply.comp  matrix_multiply.comp.spv  scalar_mul.comp  scalar_mul.comp.spv  sigmoid.comp  sigmoid.comp.spv  sigmoid_deriv.comp  sigmoid_deriv.comp.spv
src/: desc_set_allocator.rs  elem_arithmetic.rs  engine.rs  lib.rs  matrix.rs  matrix_multiply.rs  pass.rs  scalar_ops.rs  sigmoid.rs  tests.rs
